OpenLDAP 2.1 Change Log

OpenLDAP 2.1.18 Engineering

OpenLDAP 2.1.17 Release
	Fixed libldap_r thread pool context bug (ITS#2404)
	Fixed libldap T.61 convert bug (ITS#2388)
	Fixed libldap h_errno bug
	Fixed slapd cn=# bug (ITS#2387)
	Fixed slapd naming violation error checks
	Fixed slapd modify password uninit free bug (ITS#2390)
	Fixed slapd request flooding bug (ITS#2389)
	Fixed slurpd one shot mode (ITS#2385)
	Fixed slurpd core dump on exit (ITS#2363)
	Fixed slapadd oidm destroy bug (ITS#2409)
	Fixed clients critical argument handling
	Updated clients password file support
	Added slappasswd password file support
	Removed lint (ITS#2382)
	Build Environment
		Updated versioning system
		Added LDAP cache shell-only routines
	Documentation
		Updated slurpd(8) -u usage
		Misc man page updates

OpenLDAP 2.1.16 Release
	Fixed slapd sasl internal search "auth" issue
	Fixed liblber BER decoding bug (ITS#2365)
	Fixed slurpd TLS failure handling (ITS#2253)
	Fixed back-meta NULL deref bug (ITS#2359)
	Fixed back-ldap memory corruption (ITS#2362)
	Fixed back-bdb IDL cache leak (ITS#2367)
	Fixed slapd index large db files bug (ITS#2368)
	Updated back-perl (ITS#2356)
	Removed ldaptcl from distribution
	Removed lint
	Build Environment
		Regenerated configure script for IPv6 fix (ITS#2347)
	Documentation
		Misc man page updates

OpenLDAP 2.1.15 Release
	Fixed slapd saslauthz null backend crash
	Fixed libldap IPv6 SASL host bug (ITS#2347)
	Fixed liblber 64bit len/tag bug (ITS#2344)
	Fixed liblutil getpeereid replacement function (ITS#2333)
	Fixed slapd illegal schema crash (ITS#2342)
	Updated slaptools default backend (ITS#2343)
	Updated liblber ber_get_stringbv handling
	Removed lint
	Build Environment
		Updated NT build environment w/ slurpd support
		Updated test suite
	Documentation
		Misc man page updates

OpenLDAP 2.1.14 Release
	Fixed slapd schema_check name check crash (ITS#2330)
	Fixed slapd DirectoryString extraneous space index bug (ITS#2328)